--- a/TSwiftHelper/TSwiftHelper/Assets/Info.plist
+++ b/TSwiftHelper/TSwiftHelper/Assets/Info.plist
@@ -20,6 +20,7 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string></string>
 		<string>Inter-Italic.otf</string>
 		<string>Inter-Regular.otf</string>
 		<string>Inter-SemiBold.otf</string>
@@ -42,6 +43,9 @@
 		<string>Niramit-Regular.ttf</string>
 		<string>Niramit-SemiBold.ttf</string>
 		<string>Niramit-SemiBoldItalic.ttf</string>
+		<string>RTA-Bold.ttf</string>
+		<string>RTA-Light.ttf</string>
+		<string>RTA-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
